@@ -1,5 +1,9 @@
 debbugs (2.4.2) UNRELEASED; urgency=low
 
+  * Anthony Towns:
+    - Add "package" command to service (control@) to limit the bugs that
+      the following commands apply to.
+
   * Colin Watson:
     - Add (slightly) fancy CGI decoding of message/* MIME types.
     - CGI scripts now support multiple maintainers for a single package.
